--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "test": "npm -s run mocha && npm run -s lint && npm run -s jscs",
     "test:debug": "mocha debug -R spec test --recursive",
     "mocha": "mocha -R spec test --recursive",
-    "lint": "jshint index.js test/*.js test/**/*js lib/*js app/**/*js ",
-    "jscs": "jscs index.js test/*.js test/**/*js lib/*js app/**/*js"
+    "lint": "jshint index.js test/*.js test/**/*js lib/*js app/**/*js "
   },
   "repository": {
     "type": "git",
@@ -34,11 +33,10 @@
     "chai": "^3.5.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
-    "jscs": "^3.0.7",
     "jshint": "^2.9.4",
     "koa": "^2.2.0",
-    "mocha": "^2.1.0",
-    "supertest": "^1.2.0"
+    "mocha": "^8.0.1",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "es6-promise": "^3.3.1",
